# datu

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  VERSIONS.md
.cursor/commands/: make-pr.md  make-release.md
.cursor/skills/make-release/: SKILL.md
.cursor/skills/tag-and-publish-release/: SKILL.md
.github/workflows/: ci.yml
benches/: parquet_to_avro.rs
docs/: PIPELINE.mermaid  REPL.md
features/: cli.feature  convert.feature  head.feature  schema.feature  tail.feature
features/cli/: cli.feature  concat.feature  convert.feature  count.feature  diff.feature  head.feature  sample.feature  schema.feature  split.feature  tail.feature
features/repl/: aggregates.feature  conversion.feature  count.feature  head.feature  repl.feature  schema.feature  select.feature  tail.feature
fixtures/: concat_part1.avro  concat_part2.avro  file1.avro  file2.avro  no_header.csv  table.csv  table.json
src/: cli.rs  errors.rs  file_type.rs  lib.rs  pipeline.rs  utils.rs
src/cli/: convert.rs  repl.rs
src/cli/repl/: builder_bridge.rs  interactive.rs  mod.rs  pipeline.rs  plan.rs  stage.rs  tests.rs
src/docs/: PIPELINE.mermaid
src/pipeline/: avro.rs  batch_readers.rs  batch_write.rs  builder.rs  concat.rs  csv.rs  data_frame_reader.rs  dataframe.rs  datasource.rs  display.rs  json.rs  orc.rs  parquet.rs  read.rs  record_batch.rs  record_batch_filter.rs  run.rs  sampling.rs  schema.rs  select.rs  spec.rs  split.rs  step.rs  tests.rs  write.rs  xlsx.rs  yaml.rs
src/pipeline/dataframe/: execute.rs  from_path.rs  legacy_reader.rs  mod.rs  source.rs  steps.rs  tests.rs  to_record_batch.rs  transform.rs  writer.rs
tests/: cli.rs  features.rs  repl.rs
tests/common/: assert_output.rs  mod.rs  parquet.rs  row_count.rs
