[package]
name = "datu"
version = "0.2.4"
edition = "2024"
description = "datu - a data file utility"
license = "MIT"
repository = "https://github.com/aisrael/datu"
readme = "README.md"
exclude = [
    ".github/*"
]

[dependencies]
anyhow = "1.0.100"
arrow = "57.2.0"
log = "0.4"
arrow-avro = "57.2.0"
arrow-json = "57.2.0"
clap = { version = "4.5.54", features = ["cargo", "derive"] }
chrono = "0.4"
datafusion = { version = "52.1.0", features = ["avro"] }
parquet = "57.2.0"
orc-rust = "0.7"
tokio = { version = "1.48", features = ["macros", "rt", "sync"] }
thiserror = "2.0.18"
csv = "1.4.0"
hashlink = "0.10"
saphyr = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_xlsxwriter = { version = "0.93", features = ["chrono"] }
rustc-literal-escaper = "0.0.7"
rustyline = "17.0"
flt = { git = "https://github.com/aisrael/flt" }

[dev-dependencies]
criterion = "0.5"
cucumber = "0.22.1"
serde_yaml = "0.9"
futures = "0.3"
gherkin = "0.15"
tempfile = "3"

[[bench]]
name = "parquet_to_avro"
harness = false

[[test]]
name = "cli"
harness = false
