[package]
name = "datu"
version = "0.3.4"
edition = "2024"
description = "datu - a data file utility"
license = "MIT"
repository = "https://github.com/aisrael/datu"
readme = "README.md"
exclude = [
    ".github/*"
]

[dependencies]
eyre = "0.6"
async-trait = "0.1"
arrow = "57.2"
log = "0.4"
arrow-avro = "57.2"
arrow-json = "57.2"
clap = { version = "4.6", features = ["cargo", "derive"] }
chrono = "0.4"
datafusion = { version = "52.3", features = ["avro"] }
parquet = "57.2"
orc-rust = "0.7.1"
futures = "0.3"
tokio = { version = "1.50", features = ["macros", "rt", "sync"] }
thiserror = "2.0"
csv = "1.4"
hashlink = "0.10"
saphyr = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_xlsxwriter = { version = "0.94", features = ["chrono"] }
rustc-literal-escaper = "0.0.7"
rustyline = "17"
flt = "0.1"
dirs = { version = "2.0", package = "dirs-next" }
rand = "0.8"
reservoir-sampling = "0.5.1"
indicatif = "0.18"

[dev-dependencies]
criterion = "0.5"
cucumber = "0.22.1"
expectrl = "0.8"
serde_yaml = "0.9"
gherkin = "0.15"
tempfile = "3"

[[bench]]
name = "parquet_to_avro"
harness = false

[[test]]
name = "cli"
harness = false

[[test]]
name = "repl"
harness = false
